--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,12 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   video_player: ^2.9.1
-  wakelock_plus: ^1.2.8
+#  wakelock_plus: ^1.2.8
+  wakelock_plus:
+    git:
+      url: https://github.com/AnilSeeroo/wakelock_plus.git
+      path: wakelock_plus
+      ref: main
 
 dev_dependencies:
   flutter_test:
